chi/org.eclipse.escet.chi.tests/tests/spec/expr/binop-lt-le-ge-gt-real-string.compile.out
Error: File "spec/expr/binop-lt-le-ge-gt-real-string.chi": Semantic error at line 18, column 23: Right operand must have a numeric type (found "string").
