chi/org.eclipse.escet.chi.tests/tests/spec/expr/binop-lt-le-ge-gt-real-string.chi
################################################################################
# Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the terms
# of the MIT License which is available at https://opensource.org/licenses/MIT
#
# SPDX-License-Identifier: MIT
#################################################################################

func int myfunc(int x): return x; end
proc myproc(int x): pass; end
model M():
    real r = 4.76;
    string g = "abcd";
    writeln("%s", r < g);
end
